<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="256dp"
    android:orientation="vertical"
    tools:context=".CommentDialog">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding="true">

        <ImageView
            android:id="@+id/close_comment_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/cont_desc_cross_button"
            android:onClick="onCloseCommentBox"
            android:src="@drawable/ic_action_close_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_comment_text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/submit_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="8dp"
            android:onClick="onSubmitComment"
            android:text="@string/done_button_text"
            android:textSize="18sp" />
    </android.support.v7.widget.CardView>

    <EditText
        style="@style/FullWidthEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_add_comment"
        android:inputType="text"
        android:textColor="@color/colorBlack" />
</LinearLayout>